<resources>
    <string name="app_name">Sdl</string>

    <string name="action_ok">确定</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">保存</string>
    <string name="hint_name">请输入姓名</string>
    <string name="hint_content">请输入内容</string>

    <string name="gallery">图库</string>
    <string name="choose_pic">选择图片</string>

    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="title_activity_contain">ContainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="del_pic">删除图片</string>
    <string name="change">修改</string>
</resources>
