<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windows_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        tools:context="com.nht.sdl.fragment.MsgFragment">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rec_round_four_white"
            android:hint="@string/hint_name"
            android:minHeight="40dp"
            android:padding="6dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec_round_four_white"
            android:gravity="left|top"
            android:hint="@string/hint_content"
            android:maxHeight="180dp"
            android:minHeight="60dp"
            android:padding="6dp" />

        <EditText
            android:id="@+id/etOwnerId"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rec_round_four_white"
            android:padding="6dp"
            android:text="1234" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="我的用户ID是1234" />


        <Button
            android:id="@+id/btnPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/choose_pic" />

        <Button
            android:id="@+id/btnDelPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/del_pic" />

        <com.nht.sdl.widget.MyGridView
            android:id="@+id/gvPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:horizontalSpacing="4dp"
            android:numColumns="4"
            android:scrollbars="none"
            tools:listitem="@layout/gallery_item" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save" />


    </LinearLayout>
</ScrollView>